Fixed the server and as working server still need fix